# acac

./: .ghci  .gitignore  README.ja.md  README.md  acac.cabal  flake.nix  plan.md  treefmt.nix
.claude/skills/sync-ghci/: SKILL.md
.claude/skills/sync-readme-en/: SKILL.md
.github/workflows/: downloads-badge.yml  release.yml  scorecard.yml  test.yml
app/: Main.hs
docs/adr/: 0001-use-text-for-string-processing.md  0002-submissions-api-pagination.md  0003-separate-pure-logic-from-io.md  0004-fetch-window-and-strategy.md  0005-npm-distribution-optional-dependencies.md  0006-cachix-for-static-build-in-ci.md  0007-package-name-acac-cli.md  0008-windows-macos-via-ghcup-cabal.md  0009-npm-downloads-badge-sum-of-platform-packages.md
npm/: .gitignore  README.md  package.json
src/: Acac.hs
test/: Spec.hs
